--- a/kontak.html
+++ b/kontak.html
@@ -27,44 +27,44 @@
 
     <!-- NAVBAR -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-transparent position-fixed w-100">
-        <div class="container">
-          <a class="navbar-brand" href="#">
-            <img src="Assets/img/pama_logo.png" alt="" width="30" class="d-inline-block align-text-top me-3">
-            PT. Pamapersada Nusantara</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav mx-auto">
-              <li class="nav-item mx-2">
-                <a class="nav-link" aria-current="page" href="index.html">Beranda</a>
-              </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Tentang Kami</a>
-                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <li><a class="dropdown-item" href="visimisi.html">Visi & Misi</a></li>
-                  <li><a class="dropdown-item" href="about.html">Pengenalan</a></li>
-                </ul>
-              </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Departement</a>
-                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <li><a class="dropdown-item" href="#">SM</a></li>
-                  <li><a class="dropdown-item" href="#">OPR</a></li>
-                  <li><a class="dropdown-item" href="#">FA</a></li>
-                  <li><a class="dropdown-item" href="#">HCGS</a></li>
-                  <li><a class="dropdown-item" href="#">PTS</a></li>
-                  <li><a class="dropdown-item" href="#">TRP</a></li>
-                  <li><a class="dropdown-item" href="#">COMEX</a></li>
-                </ul>
-              </li>
-              <li class="nav-item mx-2">
-                <a class="nav-link active" href="kontak.html">Kontak</a>
-              </li>
-            </ul>
-          </div>
+      <div class="container">
+        <a class="navbar-brand" href="#">
+          <img src="Assets/img/pama_logo.png" alt="" width="30" class="d-inline-block align-text-top img-nav">
+          PT. Pamapersada Nusantara</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav mx-auto">
+            <li class="nav-item mx-2">
+              <a class="nav-link" aria-current="page" href="index.html">Beranda</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Tentang Kami</a>
+              <ul class="dropdown-menu animate slideIn" aria-labelledby="navbarDropdown">
+                <li><a class="dropdown-item"  href="visimisi.html">Visi & Misi</a></li>
+                <li><a class="dropdown-item"  href="about.html">Pengenalan</a></li>
+              </ul>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Departement</a>
+              <ul class="dropdown-menu animate slideIn" aria-labelledby="navbarDropdown">
+                <li><a class="dropdown-item" href="#">SM</a></li>
+                <li><a class="dropdown-item" href="#">OPR</a></li>
+                <li><a class="dropdown-item" href="#">FA</a></li>
+                <li><a class="dropdown-item" href="#">HCGS</a></li>
+                <li><a class="dropdown-item" href="#">PTS</a></li>
+                <li><a class="dropdown-item" href="#">TRP</a></li>
+                <li><a class="dropdown-item" href="#">COMEX</a></li>
+              </ul>
+            </li>
+            <li class="nav-item mx-2">
+              <a class="nav-link active" href="kontak.html">Kontak</a>
+            </li>
+          </ul>
         </div>
-      </nav>
+      </div>
+    </nav>
 
       <!-- HERO SECTION -->
       <section id="heroku" class="d-flex flex-column justify-content-end align-items-center">
@@ -95,21 +95,21 @@
                       <a href="#">JL. Mulawarman RT 39, Kel. Manggar, Kec. Balikpapan Timur</a>
                     </div>
 
-                    <div class="mb-2">
+                    <div class="mb-2 d-flex align-items-center">
                       <i class="fa-solid fa-phone-volume icon"></i>
                       <a href="#">000-0000-0000</a>
                     </div>
 
-                    <div class="mb-2">
+                    <div class="mb-2 d-flex align-items-center">
                       <i class="fa-regular fa-envelope icon"></i>
                       <a href="#">abcdefg@gmail.com</a>
                     </div>
                   </div>
                   <h6>Social Media</h6>
-                  <i class="fa-brands fa-facebook icon me-3"></i>
-                  <i class="fa-brands fa-twitter icon me-3"></i>
-                  <i class="fa-brands fa-instagram icon me-3"></i>
-                    <a href="#" class="linkpama">Pamapersada</a>
+                  <a href="#" class="linkpama"><i class="fa-brands fa-facebook icon me-lg-3 me-1"></i></a>
+                  <a href="#" class="linkpama"><i class="fa-brands fa-twitter icon me-lg-3 me-1"></i></a>
+                  <a href="#" class="linkpama"><i class="fa-brands fa-instagram icon me-lg-3 me-1"></i></a>
+                  <a href="#" class="linkpama">Pamapersada</a>
             </div>
               <div class="col-md-6">
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3988.9080649788934!2d116.
@@ -124,29 +124,31 @@
         </div>
       </section>
 
-      <!-- FOOTER -->
-      <footer class="d-flex align-items-center position-relative">
-      <div class="container-fluid">
-        <div class="container">
-          <div class="row">
-            <div class="col-md-7 d-flex align-items-center">
-              <img src="assets/img/pama_logo.png" alt="" width="30px">
-              <a href="#" class="ms-3">PT. Pamapersada Nusantara</a>
-            </div>
-            <div class="col-md-5 d-flex justify-content-evenly">
-              <a href="#">Beranda</a>
-              <a href="#">Tentang Kami</a>
-              <a href="#">Layanan</a>
-              <a href="#">Kontak</a>
-            </div>
-          </div>
-          <div class="row position-absolute copyright start-50 translate-middle">
-            <div class="col-md-12">
-              <p>Copyright &copy; 2023 - PT. Pamapersada Nusantara. All Right Reserved</p>
-            </div>
-          </div>
+       <!-- FOOTER -->
+       <footer class="footer-distributed">
+
+        <div class="footer-left">
+  
+          <a class="footer-links" href="#">
+            <img src="Assets/img/pama_logo.png" alt="" width="30" class="image-footer d-inline-block align-text-top">
+            PT. Pamapersada Nusantara</a>
+  
+          <p class="footer-links">
+            <a href="#">Beranda</a>
+            ·
+            <a href="#">Tentang Kami</a>
+            ·
+            <a href="#">Depart</a>
+            ·
+            <a href="#">Kontak</a>
+          </p>
+  
+          <p class="footer-company-name mb-2">PT. Pamapersada Nusantara © 2023</p>
+          <a href="#"><i class="iconfooter fa-brands fa-facebook mx-2"></i></a>
+          <a href="#"><i class="iconfooter fa-brands fa-twitter mx-2"></i></a>
+          <a href="#"><i class="iconfooter fa-brands fa-instagram mx-2"></i></a>
+
         </div>
-      </div>
       </footer>
 
       <script src="js/script.js"></script>
