--- a/visimisi.html
+++ b/visimisi.html
@@ -5,6 +5,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
@@ -25,44 +27,44 @@
 
     <!-- NAVBAR -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-transparent position-fixed w-100">
-        <div class="container">
-          <a class="navbar-brand" href="#">
-            <img src="Assets/img/pama_logo.png" alt="" width="30" class="d-inline-block align-text-top me-3">
-            PT. Pamapersada Nusantara</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav mx-auto">
-              <li class="nav-item mx-2">
-                <a class="nav-link" aria-current="page" href="index.html">Beranda</a>
-              </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link active dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Tentang Kami</a>
-                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <li><a class="dropdown-item" href="visimisi.html">Visi & Misi</a></li>
-                  <li><a class="dropdown-item" href="about.html">Pengenalan</a></li>
-                </ul>
-              </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Departement</a>
-                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <li><a class="dropdown-item" href="#">SM</a></li>
-                  <li><a class="dropdown-item" href="#">OPR</a></li>
-                  <li><a class="dropdown-item" href="#">FA</a></li>
-                  <li><a class="dropdown-item" href="#">HCGS</a></li>
-                  <li><a class="dropdown-item" href="#">PTS</a></li>
-                  <li><a class="dropdown-item" href="#">TRP</a></li>
-                  <li><a class="dropdown-item" href="#">COMEX</a></li>
-                </ul>
-              </li>
-              <li class="nav-item mx-2">
-                <a class="nav-link" href="kontak.html">Kontak</a>
-              </li>
-            </ul>
-          </div>
+      <div class="container">
+        <a class="navbar-brand" href="#">
+          <img src="Assets/img/pama_logo.png" alt="" width="30" class="d-inline-block align-text-top img-nav">
+          PT. Pamapersada Nusantara</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav mx-auto">
+            <li class="nav-item mx-2">
+              <a class="nav-link " aria-current="page" href="index.html">Beranda</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link active dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Tentang Kami</a>
+              <ul class="dropdown-menu animate slideIn" aria-labelledby="navbarDropdown">
+                <li><a class="dropdown-item"  href="visimisi.html">Visi & Misi</a></li>
+                <li><a class="dropdown-item"  href="about.html">Pengenalan</a></li>
+              </ul>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Departement</a>
+              <ul class="dropdown-menu animate slideIn" aria-labelledby="navbarDropdown">
+                <li><a class="dropdown-item" href="#">SM</a></li>
+                <li><a class="dropdown-item" href="#">OPR</a></li>
+                <li><a class="dropdown-item" href="#">FA</a></li>
+                <li><a class="dropdown-item" href="#">HCGS</a></li>
+                <li><a class="dropdown-item" href="#">PTS</a></li>
+                <li><a class="dropdown-item" href="#">TRP</a></li>
+                <li><a class="dropdown-item" href="#">COMEX</a></li>
+              </ul>
+            </li>
+            <li class="nav-item mx-2">
+              <a class="nav-link" href="kontak.html">Kontak</a>
+            </li>
+          </ul>
         </div>
-      </nav>
+      </div>
+    </nav>
 
       <!-- HERO SECTION -->
       <section id="heroku" class="d-flex flex-column justify-content-end align-items-center">
@@ -75,84 +77,79 @@
         </div>
       </section>
 
-       <!-- LAYANAN SECTION -->
-       <section id="layanan">
-        <div class="container">
-          <div class="row">
-            <div class="col-md-12 text-center">
-              <h2>Layanan Terbaik Kami</h2>
-              <span class="sub-title">Sebagai salah satu kontraktor penambangan batubara terbesar di dunia, Pama memiliki kompetensi yang <br/>luas & pemahaman mendalam dalam hal pengembangan & operasi tambang batubara yang meliputi :</span>
+       <!-- VISI SECTION -->
+       <section id="visi">
+        <div class="container-fluid">
+          <div class="container">
+
+            <div class="row">
+              <div class="col-lg-8 col-md-12 col-sm-12">
+                <h6>OUR</h6>
+                <h3>VISION</h3>
+                  <div class="vision">
+                    <div class="my-4 d-flex align-items-center">
+                      <p style="text-align: justify;">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+                    </div>
+                  </div>
+                </div>
+              
+              <div class="col-lg-4 col-md-12 text-align text-center justify-content-center">
+                <div>
+                <img src="Assets/img/people2.png" class="img-fluid image-visi" alt="Responsive Image" width="320">
+                </div>
+              </div>
             </div>
           </div>
-
-          <div class="row mt-5">
-
-            <div class="col-md-3 text-center">
-              <div class="card-layanan">
-                <div class="circle-icon position-relative mx-auto">
-                  <img src="assets/img/explore.png" alt="" width="40px" class="position-absolute top-50 start-50 translate-middle">
-                </div>
-                <h3 class="mt-4">Explorasi</h3>
-                <p class="mt-2">Pemeteaan Geologi, topografi, eksplorasi pengeboran,evaluasi stockpile, dan studi kelayakan.</p>
-              </div>
-            </div>
-
-            <div class="col-md-3 text-center">
-              <div class="card-layanan">
-                <div class="circle-icon position-relative mx-auto">
-                  <img src="assets/img/infrastructure.png" alt="" width="40px" class="position-absolute top-50 start-50 translate-middle">
-                </div>
-                <h3 class="mt-4">Infrastruktur</h3>
-                <p class="mt-2">Gudang, bengkel, kantor, jalan & pendukung, peralatan operasional, jalan pengangkutan, pelabuhan, tumpukan persediaan, dan fasilitas kamp.</p>
-              </div>
-            </div>
-
-            <div class="col-md-3 text-center">
-              <div class="card-layanan">
-                <div class="circle-icon position-relative mx-auto">
-                  <img src="assets/img/operational-system.png" alt="" width="40px" class="position-absolute top-50 start-50 translate-middle">
-                </div>
-                <h3 class="mt-4">Operasi</h3>
-                <p class="mt-2">Peledakan pengeboran, pemindahan lapisan penutup, penggalian penghancuran serta pengangkutan batu bara, dan pengiriman.</p>
-              </div>
-            </div>
-
-            <div class="col-md-3 text-center">
-              <div class="card-layanan">
-                <div class="circle-icon position-relative mx-auto">
-                  <img src="assets/img/marketing.png" alt="" width="40px" class="position-absolute top-50 start-50 translate-middle">
-                </div>
-                <h3 class="mt-4">Perencanaan</h3>
-                <p class="mt-2">Pemodelan geologi, desain lubang, jadwal produksi, dan urutan tambang.</p>
-              </div>
-            </div>
-
         </div>
       </section>
 
-      <!-- FOOTER -->
-      <footer class="d-flex align-items-center position-relative">
-      <div class="container-fluid">
-        <div class="container">
-          <div class="row">
-            <div class="col-md-7 d-flex align-items-center">
-              <img src="assets/img/pama_logo.png" alt="" width="30px">
-              <a href="#" class="ms-3">PT. Pamapersada Nusantara</a>
-            </div>
-            <div class="col-md-5 d-flex justify-content-evenly">
-              <a href="#">Beranda</a>
-              <a href="#">Tentang Kami</a>
-              <a href="#">Layanan</a>
-              <a href="#">Kontak</a>
-            </div>
-          </div>
-          <div class="row position-absolute copyright start-50 translate-middle">
-            <div class="col-md-12">
-              <p>Copyright &copy; 2023 - PT. Pamapersada Nusantara. All Right Reserved</p>
-            </div>
+            <!-- MISI SECTION -->
+            <section id="misi">
+              <div class="container-fluid">
+                <div class="container">
+              
+            <div class="row">
+              <div class="col-md-12 text-center">
+                <div class="mision">
+                <h3>MISION</h3>
+                <div class="my-5 align-items-center">
+                  <h5>• Lorem Ipsum is simply dummy text of the printing and typesetting industry.</h5>
+                  <h5>• Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</h5>
+                  <h5>• It has survived not only five centuries</h5>
+                </div>
+                </div>
+              </div>
+            </div>  
+
           </div>
         </div>
-      </div>
+      </section>
+
+       <!-- FOOTER -->
+       <footer class="footer-distributed">
+
+        <div class="footer-left">
+  
+          <a class="footer-links" href="#">
+            <img src="Assets/img/pama_logo.png" alt="" width="30" class="image-footer d-inline-block align-text-top">
+            PT. Pamapersada Nusantara</a>
+  
+          <p class="footer-links">
+            <a href="#">Beranda</a>
+            ·
+            <a href="#">Tentang Kami</a>
+            ·
+            <a href="#">Depart</a>
+            ·
+            <a href="#">Kontak</a>
+          </p>
+  
+          <p class="footer-company-name mb-2">PT. Pamapersada Nusantara © 2023</p>
+          <a href="#"><i class="iconfooter fa-brands fa-facebook mx-2"></i></a>
+          <a href="#"><i class="iconfooter fa-brands fa-twitter mx-2"></i></a>
+          <a href="#"><i class="iconfooter fa-brands fa-instagram mx-2"></i></a>
+
+        </div>
       </footer>
 
       <script src="js/script.js"></script>
